[package]
name = "lumberjack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.6", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3.3", features = ["full"] }
bytes = "1.1.0"
rusqlite = "0.27.0"
libsqlite3-sys = { version = "0.24", features = ["bundled"]}
askama = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
